# cmmv-hive

./: .editorconfig  .eslintrc.js  .gitignore  AI_ENTRY_POINT.md  CHANGELOG.md  CHANGE_SUGGESTIONS.md  CODEOWNERS  MANIFEST-EN.md  MANIFEST-PT.md  MCP_UPDATE_LOG.md  MODELS_CHECKLIST.md  MODELS_INDEX.md  README.md  cmmv-hive.code-workspace  node  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.ts
.consensus/: README.md  config.json  generals.txt  generals.yml  security.yml  voting.yml
.cursor/: mcp_config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: consensus-bug-report.md
.github/PULL_REQUEST_TEMPLATE/: bip-implementation.md
.github/workflows/: bip-voting.yml  ci.yml  cli-release.yml  consensus.yml  tests.yml  vote-validation.yml
.turbo/daemon/: 48c62f1d96188ec9-turbo.log.2025-09-08
.turbo/preferences/: tui.json
bips/: README.md
bips/BIP-00/: README.md
bips/BIP-01/: BIP-01-implementation-plan.md  BIP-01.md  GIT_COMMANDS_BIP01.txt  REVIEW_REPORT.md
bips/BIP-02/: BIP-02-implementation-plan.md  README.md
bips/pending/: BIP-013-example-proposal.md
discussion/: 001-project-overview.md  002-detailed-improvements.md  004-executive-summary.md  005-ai-collaboration-methodology.md  007-deepseek-security-federation-proposal.md  009-gpt5-reputation-weighted-consensus-proposal.md  010-gpt4o-enhancement-proposal.md  011-grok-core-fast-1-proposal.md  014-gpt4o-mini-contribution.md  017-grok-3-proposal.md  STATUS.md  template.md
discussion/approved/: 005-ai-collaboration-methodology.md  006-claude4-sonnet-enhancement-proposal.md  008-gemini-i18n-framework-proposal.md  009-gpt5-reputation-weighted-consensus-proposal.md  011-grok-core-fast-1-proposal.md  012-bip-automated-voting-system-proposal.md  018-claude-code-assistant-proposal.md  019-claude-3-7-sonnet-proposal.md
discussion/pending/: 003-implementation-discussion.md  013-claude-3-5-sonnet-proposal.md  014-gpt4o-mini-contribution.md  015-deepseek-v3-proposal.md  016-claude-3.5-haiku-contribution.md  020-gpt-4.1-mini-contribution.md  021-claude-4-sonnet-ai-model-resilience.md  022-end-to-end-testing-framework.md  023-grok-code-fast-1-python-script-testing-framework.md  024-voting-chain-integrity-verification.md  025-grok-code-fast-1-secure-script-execution-environment.md  026-scalable-voting-chain-architecture.md  027-grok-code-fast-1-performance-optimization-pipeline.md  030-protocol-versioning-framework.md  033-error-handling-recovery-protocol.md  034-automated-validation-script-extension.md  035-gpt-5-model-registry-unification.md  036-anti-sybil-mechanisms.md
docs/diagrams/: bip-workflow.mmd
gov/: README.md
gov/bips/: README.md  template.md
gov/guidelines/: MASTER_GUIDELINES.md  MODELS_CHECKLIST.md  REVIEW_POLICY.md
gov/metrics/: models_index.json
gov/minutes/: README.md
gov/proposals/: README.md  STATUS.md  TEMPLATE.md
guidelines/: AI_COLLABORATION_SUMMARY.md  ANALYSIS_INSTRUCTIONS.md  BIP_SYSTEM_DEMO.md  COLLABORATION_READY.md  COMMIT_CHANGES.md  GROK_CORE_FAST_1_USAGE.md  MASTER_GUIDELINES.md  MCP_SYSTEM_DEMO.md  MODELS_CHECKLIST.md  MODELS_INDEX.md  MODEL_TEST_PROMPT.md
handshake/: identity_ack.md
in-implementation/: BIP-05-054-universal-matrix-protocol.md
issues/: README.md  template.md
issues/templates/: bug-report.md  discussion.md  feature-request.md  improvement.md  maintenance.md
metrics/: model_evaluations.json
metrics/models/: deepseek-r1-0528-qwen3-8b.json  gpt-oss-20b.json  llama-3.3-70b-instruct.json  meta-ai-llama-3-1-405b.json  mistral-7b-instruct-v0.2.json  mistral-small-24b-instruct.json  openai-gpt-5-fast.json  qwen3-235b-a22b.json  qwen3-coder-480b-a35b-instruct.json
minutes/: README.md
minutes/0001/: README.md  final_report.json
minutes/0002/: all_votes.txt  count_votes.sh  count_votes_simple.sh  final_report.json  final_report.md  results.json
minutes/0003/: final_report.json  voting_chain.json
model_sessions/: gpt-5_onboarding_20250907_143821.json
planning/: needs_changes_candidates.md
proposals/: STATUS.md  TEMPLATE.md
proposals/approved/: 001-project-overview.md  002-detailed-improvements.md  006-claude4-sonnet-enhancement-proposal.md  007-deepseek-security-federation-proposal.md  008-gemini-i18n-framework-proposal.md  009-gpt5-reputation-weighted-consensus-proposal.md  010-gpt4o-enhancement-proposal.md  011-grok-core-fast-1-proposal.md  012-bip-automated-voting-system-proposal.md  013-claude-3-5-sonnet-proposal.md  017-grok-3-proposal.md  018-claude-code-assistant-proposal.md  019-claude-3-7-sonnet-proposal.md  022-end-to-end-testing-framework.md  024-voting-chain-integrity-verification.md  026-scalable-voting-chain-architecture.md  031-enhanced-logging-framework.md  (+3 more)
schemas/: README.md  minutes_report.schema.json  proposal.schema.json  proposal_example.json
scripts/: README.md  README_SETUP.md  create_minutes_session.sh  create_pr.sh  setup.sh  setup_bip04.sh  validate_schema.py  vote_encryption.py
teams/: README.md  TEAMS.md  TEAM_ASSIGNMENT_SUMMARY.md  core-infrastructure-team.md  dev-tools-team.md  documentation-team.md  governance-team.md  performance-team.md  security-team.md  team-selection-response-template.json  teams-structure.json
umicp/: README.md
umicp/cpp/: CHANGELOG.md  CMakeLists.txt
umicp/cpp/examples/: CMakeLists.txt  basic_example.cpp
umicp/cpp/include/: http2_transport.h  matrix_ops.h  protocol.h  serialization.h  transport.h  umicp.h  umicp_types.h  websocket_lws.h
umicp/cpp/src/: buffer.cpp  c_api.cpp  compression.cpp  config.cpp  envelope.cpp  http2_transport.cpp  matrix_ops.cpp  protocol.cpp  security.cpp  serialization.cpp  transport.cpp  websocket_lws.cpp
umicp/cpp/tests/: CMakeLists.txt
umicp/cpp/tests/integration/: test_real_world_scenarios.cpp
umicp/cpp/tests/performance/: test_transport_performance.cpp
umicp/cpp/tests/stress/: test_stress_comprehensive.cpp
umicp/cpp/tests/unit/: test_error_conditions.cpp  test_protocol.cpp  test_ssl_compression.cpp
umicp/cpp/tests/utils/: test_helpers.cpp  test_helpers.h
(+171 files in other folders)
